deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faq-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faq-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: faq-frontend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: faq-frontend
        image: oxfaq.azurecr.io/faq-frontend:130e37df4c1c80c497ccd22b97f99f15226da15f
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: faq-frontend-service
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: faq-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faq-frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "30M"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - demo.0xfaq.ai
    secretName: demo-tls
  rules:
    - host: demo.0xfaq.ai
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: faq-frontend-service
                port:
                  name: http
